--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ db/*.sqlite3
 db/schema.rb
 files/*
 public/plugin_assets
+public/images/thumbs
 tmp/*
 vendor/plugins/redmine_taska/db/migrate/20090806000000_create_defaults.rb
